tests/fixtures/dimensions/change_blast_radius/bad/u5.ts
import { core } from "./core";
export const u5 = core + 5;
